<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background_main"
    tools:context=".presentation.screen.HotelFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/grey_background_main">


        <LinearLayout
            android:id="@+id/boxOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_info"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.viewpager2.widget.ViewPager2
                android:layout_width="match_parent"
                android:layout_height="250dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_rating"
                android:orientation="horizontal"
                android:padding="@dimen/padding">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating"
                    android:textColor="@color/gold_rating"
                    android:textSize="@dimen/little_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:text="@string/name_hotel"
                android:textColor="@color/black"
                android:textSize="@dimen/middle_text" />

            <TextView
                android:id="@+id/adressTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/adress"
                android:textColor="@color/blue_background_btn"
                android:textSize="@dimen/little_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_bottom">

                <TextView
                    android:id="@+id/priseTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_heavy"
                    android:text="@string/prise"
                    android:textColor="@color/black"
                    android:textSize="@dimen/large_text" />

                <TextView
                    android:id="@+id/priseConditions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:paddingStart="@dimen/padding_start"
                    android:text="@string/priseConditions"
                    android:textColor="@color/grey_additional_info"
                    android:textSize="@dimen/little_text" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/boxSecond"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@drawable/box_info"
            android:orientation="vertical"
            android:paddingStart="@dimen/main_pedding_start_end"
            android:paddingEnd="@dimen/main_pedding_start_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxOne">

            <TextView
                android:id="@+id/aboutHotel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_bold"
                android:paddingStart="@dimen/padding_start"
                android:text="@string/about_hotel"
                android:textColor="@color/black"
                android:textSize="@dimen/middle_text" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_start">

                <TextView
                    android:id="@+id/bonus1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:padding="@dimen/padding_start"
                    android:text="@string/third_line"
                    android:textColor="@color/grey_additional_info"
                    android:textSize="@dimen/little_text" />

                <TextView
                    android:id="@+id/bonus2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:padding="@dimen/padding_start"
                    android:paddingStart="10dp"
                    android:text="@string/paid_wi_fi"
                    android:textColor="@color/grey_additional_info"
                    android:textSize="@dimen/little_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/padding_start">

                <TextView
                    android:id="@+id/bonus3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:padding="@dimen/padding_start"
                    android:text="@string/km_30_the_airport"
                    android:textColor="@color/grey_additional_info"
                    android:textSize="@dimen/little_text" />

                <TextView
                    android:id="@+id/bonus4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:padding="@dimen/padding_start"
                    android:paddingStart="@dimen/padding"
                    android:text="@string/km_1_to_the_beach"
                    android:textColor="@color/grey_additional_info"
                    android:textSize="@dimen/little_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_pro_display_regular"
                android:paddingTop="5dp"
                android:textColor="@color/black"
                android:text="@string/description"
                android:textSize="@dimen/little_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="@dimen/padding">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:columnCount="3"
                    android:rowCount="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowSpan="2"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/padding"
                        android:src="@drawable/emoji_happy" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/conveniences" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:text="@string/most_necessary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowSpan="2"
                        android:layout_column="2"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="@dimen/padding_start"
                        android:src="@drawable/vector" />

                </GridLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:columnCount="3"
                    android:rowCount="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowSpan="2"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/padding"
                        android:src="@drawable/tick_square" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/included" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:text="@string/most_necessary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowSpan="2"
                        android:layout_column="2"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="@dimen/padding_start"
                        android:src="@drawable/vector" />

                </GridLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/padding"
                    android:columnCount="3"
                    android:rowCount="2">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowSpan="2"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/padding"
                        android:src="@drawable/close_square" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_included"
                        android:textColor="@color/black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="1"
                        android:layout_column="1"
                        android:text="@string/most_necessary" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_row="0"
                        android:layout_rowSpan="2"
                        android:layout_column="2"
                        android:layout_gravity="right|center_vertical"
                        android:layout_margin="@dimen/padding_start"
                        android:src="@drawable/vector" />

                </GridLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding"
            android:background="@color/white"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxSecond">

            <Button
                android:id="@+id/floatingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/frame_btn"
                android:textColor="@color/white"
                android:padding="@dimen/padding"
                android:textSize="@dimen/little_text"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/choosing_hotel_room"
                android:textAllCaps="false"
                />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>